--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -84,8 +84,8 @@ item.warpdrive.forcefield.upgrade.heating.name=Augmentation de chauffage
 item.warpdrive.forcefield.upgrade.heating.tooltip=Chauffe les blocs et entités. Ajoutes en d'autres pour accroître l'effet. Ajoute une inversion pour un effet de zone ou terraformation.
 item.warpdrive.forcefield.upgrade.inversion.name=Augmentation d'inversion
 item.warpdrive.forcefield.upgrade.inversion.tooltip=§4En cours d'implémentation\nModifie la zone d'effet de surface en volume. Utilise le pour cibler des entités à l'intérieur du champ ou effectuer une terraformation.
-item.warpdrive.forcefield.upgrade.itemPort.name=Augmentation de port d'item
-item.warpdrive.forcefield.upgrade.itemPort.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
+item.warpdrive.forcefield.upgrade.item_port.name=Augmentation de port d'item
+item.warpdrive.forcefield.upgrade.item_port.tooltip=S'interface avec des conteneurs attachés. Ajoutes une Augmentation d'attraction pour collecter les items du Casseur de block. Ajoutes une augmentation de répulsion pour fournir les blocks à placer avec l'augmentation de stabilisation.
 item.warpdrive.forcefield.upgrade.pumping.name=Augmentation de pompage
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4En cours d'implémentation\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
 item.warpdrive.forcefield.upgrade.range.name=Augmentation de portée
@@ -154,12 +154,13 @@ item.warpdrive.tool.tuning_fork.black.name=Diapason noir
 item.warpdrive.tool.tuning_fork.tooltip.usage=§bCliques droit sur un block§r pour ajuster ses cristaux\n§bAccroupi§r pour ajuster les cristaux alternatifs
 
 
-tile.warpdrive.passive.Energized.name=Block energisé
-tile.warpdrive.passive.Gas.name=Bloc de gaz
+tile.warpdrive.decoration.decorative.energized.name=Block energisé
+tile.warpdrive.decoration.decorative.network.name=Bloc de réseau
+tile.warpdrive.decoration.decorative.plain.name=Bloc ordinaire
+tile.warpdrive.decoration.gas.name=Bloc de gaz
+
 tile.warpdrive.passive.IridiumBlock.name=Bloc d'iridium
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Bloc de machine hyper avancé
-tile.warpdrive.passive.Network.name=Bloc de réseau
-tile.warpdrive.passive.Plain.name=Bloc ordinaire
 tile.warpdrive.passive.TransportBeacon.name=Balise de transport
 
 tile.warpdrive.machines.ChunkLoader.name=Chargeur de chunk
@@ -583,7 +584,7 @@ warpdrive.forcefield.upgrade.statusLine.cooling=refroidissement
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
 warpdrive.forcefield.upgrade.statusLine.heating=chauffage
 warpdrive.forcefield.upgrade.statusLine.inversion=inversion
-warpdrive.forcefield.upgrade.statusLine.itemPort=port d'item
+warpdrive.forcefield.upgrade.statusLine.item_port=port d'item
 warpdrive.forcefield.upgrade.statusLine.pumping=pompe
 warpdrive.forcefield.upgrade.statusLine.range=portée
 warpdrive.forcefield.upgrade.statusLine.repulsion=répulsion
