--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -84,8 +84,8 @@ item.warpdrive.forcefield.upgrade.heating.name=Heating upgrade
 item.warpdrive.forcefield.upgrade.heating.tooltip=Heat up blocks and entities. Add more Heating upgrades to boost effect. Add an Inversion for an area/terraforming effect.
 item.warpdrive.forcefield.upgrade.inversion.name=Inversion upgrade
 item.warpdrive.forcefield.upgrade.inversion.tooltip=§4Work in progress\nChange from surface to volume effect area. Use this for entity targeting or terraforming.
-item.warpdrive.forcefield.upgrade.itemPort.name=Item port upgrade
-item.warpdrive.forcefield.upgrade.itemPort.tooltip=Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops. Add a Repulsion upgrade to provide blocks to place using a Stabilization upgrade.
+item.warpdrive.forcefield.upgrade.item_port.name=Item port upgrade
+item.warpdrive.forcefield.upgrade.item_port.tooltip=Interface with attached containers. Add an Attraction upgrade to collect Block breaker drops. Add a Repulsion upgrade to provide blocks to place using a Stabilization upgrade.
 item.warpdrive.forcefield.upgrade.pumping.name=Pumping upgrade
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4Work in progress\nPump fluids at the force field location. Add more Pump upgrades to pull fluid with higher viscosity fluids like lava.
 item.warpdrive.forcefield.upgrade.range.name=Range upgrade
@@ -154,12 +154,13 @@ item.warpdrive.tool.tuning_fork.black.name=Черный камертон
 item.warpdrive.tool.tuning_fork.tooltip.usage=§bИспользуйте на блоке§7, чтобы настроить его кристаллы\n§bПрисядьте§7, чтобы настроить вторичные кристаллы
 
 
-tile.warpdrive.passive.Energized.name=Энергизированный блок
-tile.warpdrive.passive.Gas.name=Газ
+tile.warpdrive.decoration.decorative.energized.name=Энергизированный блок
+tile.warpdrive.decoration.decorative.network.name=Сетевой блок
+tile.warpdrive.decoration.decorative.plain.name=Простой блок
+tile.warpdrive.decoration.gas.name=Газ
+
 tile.warpdrive.passive.IridiumBlock.name=Блок иридия
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Высокотехнологичный корпус механизма
-tile.warpdrive.passive.Network.name=Сетевой блок
-tile.warpdrive.passive.Plain.name=Простой блок
 tile.warpdrive.passive.TransportBeacon.name=Маяк для транспортера
 
 tile.warpdrive.machines.ChunkLoader.name=Загрузчик чанков
@@ -583,7 +584,7 @@ warpdrive.forcefield.upgrade.statusLine.cooling=cooling
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
 warpdrive.forcefield.upgrade.statusLine.heating=heating
 warpdrive.forcefield.upgrade.statusLine.inversion=inversion
-warpdrive.forcefield.upgrade.statusLine.itemPort=item port
+warpdrive.forcefield.upgrade.statusLine.item_port=item port
 warpdrive.forcefield.upgrade.statusLine.pumping=pumping
 warpdrive.forcefield.upgrade.statusLine.range=increased range
 warpdrive.forcefield.upgrade.statusLine.repulsion=repulsion
