--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -14,6 +14,8 @@ death.attack.warpdrive.teleportation.player=%1$s wurde durch %2$s beim teleporti
 death.attack.warpdrive.warm=%1$s verglühte
 death.attack.warpdrive.warm.player=%1$s wurde von %2$s gebruzelt
 
+itemGroup.warpdrive=WarpDrive
+
 item.warpdrive.crafting.Malformed.name=Korruptes Item
 item.warpdrive.crafting.EmeraldCrystal.name=Smaragdkristall
 item.warpdrive.crafting.EnderCrystal.name=Enderkristall
