Updated german translation by LeoLele99

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -3,8 +3,8 @@ death.attack.warpdrive.asphyxia=%1$s ging die Luft aus
 death.attack.warpdrive.asphyxia.player=%1$s wurde von %2$s erstickt
 death.attack.warpdrive.cold=%1$s erfror
 death.attack.warpdrive.cold.player=%1$s wurde von %2$s zu Tode gefroren
-death.attack.warpdrive.irradiation=%1$s died from irradiation !!!
-death.attack.warpdrive.irradiation.player=%1$s received a lethal radiation from %2$s !!! 
+death.attack.warpdrive.irradiation=%1$s starb an Verstrahlung
+death.attack.warpdrive.irradiation.player=%1$s wurde von %2$s tödlich verstrahlt
 death.attack.warpdrive.laser=%1$s verbruzelte im Laser
 death.attack.warpdrive.laser.player=%1$s wurde von %2$s zu Tode gelasert
 death.attack.warpdrive.shock=%1$s starb an einen Stromschlag
@@ -16,7 +16,7 @@ death.attack.warpdrive.warm.player=%1$s wurde von %2$s gebruzelt
 
 itemGroup.warpdrive=WarpDrive
 
-item.warpdrive.crafting.Malformed.name=Korruptes Item
+item.warpdrive.crafting.Malformed.name=Fehlerhaftes Item
 item.warpdrive.crafting.EmeraldCrystal.name=Smaragdkristall
 item.warpdrive.crafting.EnderCrystal.name=Enderkristall
 item.warpdrive.crafting.DiamondCrystal.name=Diamantkristall
@@ -30,7 +30,7 @@ item.warpdrive.crafting.AirCanisterEmpty.tooltip=§bRechtsklicke einen Luftgener
 item.warpdrive.crafting.Lens.name=Linse
 item.warpdrive.crafting.Zoom.name=Zoom
 item.warpdrive.crafting.GlassTank.name=Glas Tank
-item.warpdrive.crafting.FlatScreen.name=Flat Screen
+item.warpdrive.crafting.FlatScreen.name=Flatscreen
 item.warpdrive.crafting.MemoryCrystal.name=Speicherkristall
 item.warpdrive.crafting.Motor.name=Motor
 item.warpdrive.crafting.BoneCharcoal.name=Knochenkohle
@@ -46,9 +46,9 @@ item.warpdrive.armor.chestplate.name=Warp Brustpanzer
 item.warpdrive.armor.leggings.name=Warp Beinschutz
 item.warpdrive.armor.boots.name=Warp Stiefel
 
-item.warpdrive.atomic.electromagnetic_cell.name=Electromagnetic cell !!!
-item.warpdrive.atomic.electromagnetic_cell.tooltip.empty=Use a particle collider to fill me! !!!
-item.warpdrive.atomic.electromagnetic_cell.tooltip.filled=Contains %1$s Å³ of %2$s !!!
+item.warpdrive.atomic.electromagnetic_cell.name=Elektromagnetische Zelle
+item.warpdrive.atomic.electromagnetic_cell.tooltip.empty=Nutze einen Teilchenbeschleuniger, um mich zu füllen!
+item.warpdrive.atomic.electromagnetic_cell.tooltip.filled=Enthält %1$s Å³ %2$s
 
 item.warpdrive.energy.IC2reactorLaserFocus.name=IC2 Reaktor-Laser-Fokus
 
@@ -128,11 +128,11 @@ item.warpdrive.tool.crystalToken4.name=Kristall Token #4
 item.warpdrive.tool.crystalToken5.name=Kristall Token #5
 
 
-item.warpdrive.tool.tuning_driver.video_channel.name=Video Channel Tuning Driver !!!
-item.warpdrive.tool.tuning_driver.beam_frequency.name=Beam Frequency Tuning Driver !!!
-item.warpdrive.tool.tuning_driver.control_channel.name=Control Channel Tuning Driver !!!
+item.warpdrive.tool.tuning_driver.video_channel.name=Videokanal Werkzeug
+item.warpdrive.tool.tuning_driver.beam_frequency.name=Strahlfrequenz Werkzeug
+item.warpdrive.tool.tuning_driver.control_channel.name=Steuerungskanal Werkzeug
 
-item.warpdrive.tool.tuning_driver.tooltip.usage=§bRight click a block§7 to tune its crystals\n§bSneak§7 to retrieve its value\n§bRight click air§7 to change mode !!!
+item.warpdrive.tool.tuning_driver.tooltip.usage=§bRechtsklicke einen Block§7 um seine Kristalle einzustellen\n§bSchleiche§7 um seinen Wert zu erfahren\n§bRechtsklicke die Luft§7 um den Modus zu ändern
 
 
 item.warpdrive.tool.tuning_fork.name=Stimmgabel
@@ -153,7 +153,7 @@ item.warpdrive.tool.tuning_fork.green.name=Grüne Stimmgabel
 item.warpdrive.tool.tuning_fork.red.name=Rote Stimmgabel
 item.warpdrive.tool.tuning_fork.black.name=Schwarze Stimmgabel
 
-item.warpdrive.tool.tuning_fork.tooltip.usage=§bRecktsklicke einen Block§7 um seine Kristalle einzustellen\n§bSschleiche§7 um alternative Kristalle einzustellen
+item.warpdrive.tool.tuning_fork.tooltip.usage=§bRecktsklicke einen Block§7 um seine Kristalle einzustellen\n§bSchleiche§7 um alternative Kristalle einzustellen
 
 
 tile.warpdrive.decoration.decorative.energized.name=Energiegeladener Block
@@ -161,44 +161,45 @@ tile.warpdrive.decoration.decorative.network.name=Netzwerk Block
 tile.warpdrive.decoration.decorative.plain.name=Ebenen Block
 tile.warpdrive.decoration.gas.name=Gas Block
 
+
 tile.warpdrive.passive.IridiumBlock.name=Iridium Block
 tile.warpdrive.passive.HighlyAdvancedMachine.name=Stark weiterentwickelter Maschinen Block
 tile.warpdrive.passive.TransportBeacon.name=Transport Leuchtfeuer
 
 tile.warpdrive.machines.ChunkLoader.name=Chunk Loader
 tile.warpdrive.machines.Laser.name=Laser
-tile.warpdrive.machines.LaserMedium.name=Medium Laser (Partikel Beschleuniger)
+tile.warpdrive.machines.LaserMedium.name=Medium Laser (Teilchenbeschleuniger)
 
-tile.warpdrive.atomic.accelerator_controller.name=Accelerator Controller !!!
-tile.warpdrive.atomic.accelerator_controller.tooltip=Controls one or more particle accelerators.\nShall be placed next to an electromagnet. !!!
-tile.warpdrive.atomic.accelerator_control_point.name=Accelerator control point !!!
-tile.warpdrive.atomic.accelerator_control_point.tooltip=Control accelerator nodes like collider, input and output.\nShall be placed exactly 1 block away from a void shell.\nStore results in any directly connected storage. !!!
-tile.warpdrive.atomic.chiller1.name=Basic Chiller !!!
-tile.warpdrive.atomic.chiller1.tooltip=Progressively cooldown electromagnets from a connected particle accelerator.\nShall be placed next to an electromagnet. !!!
-tile.warpdrive.atomic.chiller2.name=Advanced Chiller !!!
-tile.warpdrive.atomic.chiller2.tooltip=Progressively cooldown electromagnets from a connected particle accelerator.\nShall be placed next to an electromagnet. !!!
-tile.warpdrive.atomic.chiller3.name=Superior Chiller !!!
-tile.warpdrive.atomic.chiller3.tooltip=Progressively cooldown electromagnets from a connected particle accelerator.\nShall be placed next to an electromagnet. !!!
-tile.warpdrive.atomic.electromagnet1.plain.name=Basic Plain Electromagnet !!!
-tile.warpdrive.atomic.electromagnet1.plain.tooltip=Accelerate, focus and orient particles in the attached Void Shell. !!!
-tile.warpdrive.atomic.electromagnet1.glass.name=Basic Glass Electromagnet !!!
-tile.warpdrive.atomic.electromagnet1.glass.tooltip=Same a Plain Electromagnet, except you can see through it. !!!
-tile.warpdrive.atomic.electromagnet2.plain.name=Advanced Plain Electromagnet !!!
-tile.warpdrive.atomic.electromagnet2.plain.tooltip=Accelerate, focus and orient particles in the attached Void Shell. !!!
-tile.warpdrive.atomic.electromagnet2.glass.name=Advanced Glass Electromagnet !!!
-tile.warpdrive.atomic.electromagnet2.glass.tooltip=Same a Plain Electromagnet, except you can see through it. !!!
-tile.warpdrive.atomic.electromagnet3.plain.name=Superior Plain Electromagnet !!!
-tile.warpdrive.atomic.electromagnet3.plain.tooltip=Accelerate, focus and orient particles in the attached Void Shell. !!!
-tile.warpdrive.atomic.electromagnet3.glass.name=Superior Glass Electromagnet !!!
-tile.warpdrive.atomic.electromagnet3.glass.tooltip=Same a Plain Electromagnet, except you can see through it. !!!
-tile.warpdrive.atomic.particles_collider.name=Particles Collider !!!
-tile.warpdrive.atomic.particles_collider.tooltip=Deviates particles to collide against each others or a fixed target.\nRequires 12 blocks and an Accelerator control point to collect results. !!!
-tile.warpdrive.atomic.particles_injector.name=Particles Injector !!!
-tile.warpdrive.atomic.particles_injector.tooltip=Inject items or particles from a connected storage into a Basic Accelerator. !!!
-tile.warpdrive.atomic.void_shell_plain.name=Plain Void Shell !!!
-tile.warpdrive.atomic.void_shell_plain.tooltip=Provides 2 empty channels for particles to travel inside an accelerator setup.\nConnects only horizontally to other Void Shells. !!!
-tile.warpdrive.atomic.void_shell_glass.name=Glass Void Shell !!!
-tile.warpdrive.atomic.void_shell_glass.tooltip=Same as a Plain Void Shell, except you can see particles moving through it. !!!
+tile.warpdrive.atomic.accelerator_controller.name=Beschleunigungsregler
+tile.warpdrive.atomic.accelerator_controller.tooltip=Regelt einen oder mehrere Teilchenbeschleuniger.\nSollte neben einem Elektromagnet platziert werden.
+tile.warpdrive.atomic.accelerator_control_point.name=Beschleuniger Kontrollpunkt
+tile.warpdrive.atomic.accelerator_control_point.tooltip=Regele Beschleuniger Knotenpunkte wie Collider, Input und Output.\nSollte genau einen Block neben einer Void Shell platziert werden.\nSpeichere Erzeugnisse in jedem direkt verbundenen Speicher.
+tile.warpdrive.atomic.chiller1.name=Standard Kühler
+tile.warpdrive.atomic.chiller1.tooltip=Kühlt Elektromagneten verbundener Teilchenbeschleuniger.\nSollte neben einem Elektromagnet platziert werden.
+tile.warpdrive.atomic.chiller2.name=Weiterentwickelter Kühler
+tile.warpdrive.atomic.chiller2.tooltip=Kühlt Elektromagneten verbundener Teilchenbeschleuniger.\nSollte neben einem Elektromagnet platziert werden.
+tile.warpdrive.atomic.chiller3.name=Überlegener Kühler
+tile.warpdrive.atomic.chiller3.tooltip=Kühlt Elektromagneten verbundener Teilchenbeschleuniger.\nSollte neben einem Elektromagnet platziert werden.
+tile.warpdrive.atomic.electromagnet1.plain.name=Standard normaler Elektromagnet
+tile.warpdrive.atomic.electromagnet1.plain.tooltip=Beschleunige, fokussiere und lenke Teilchen in der verbundenen Void Shell.
+tile.warpdrive.atomic.electromagnet1.glass.name=Standard Glas Elektromagnet
+tile.warpdrive.atomic.electromagnet1.glass.tooltip=Genau wie der normale Elektromagnet, aber man kann durchsehen.
+tile.warpdrive.atomic.electromagnet2.plain.name=Weiterentwickelter normaler Elektromagnet
+tile.warpdrive.atomic.electromagnet2.plain.tooltip=Beschleunige, fokussiere und lenke Teilchen in der verbundenen Void Shell.
+tile.warpdrive.atomic.electromagnet2.glass.name=Weiterentwickelter Glas Elektromagnet
+tile.warpdrive.atomic.electromagnet2.glass.tooltip=Genau wie der normale Elektromagnet, aber man kann durchsehen.
+tile.warpdrive.atomic.electromagnet3.plain.name=Überlegener normaler Elektromagnet
+tile.warpdrive.atomic.electromagnet3.plain.tooltip=Beschleunige, fokussiere und lenke Teilchen in der verbundenen Void Shell.
+tile.warpdrive.atomic.electromagnet3.glass.name=Überlegener Glas Elektromagnet
+tile.warpdrive.atomic.electromagnet3.glass.tooltip=Genau wie der normale Elektromagnet, aber man kann durchsehen.
+tile.warpdrive.atomic.particles_collider.name=Teilchen Collider
+tile.warpdrive.atomic.particles_collider.tooltip=Lenkt Teilchen ab, um miteinander oder mit einem Ziel zu kollidieren.\nBenötigt 12 Blöcke und einen Beschleuniger Kontrollpunkt für Resultate.
+tile.warpdrive.atomic.particles_injector.name=Teilchen Injektor
+tile.warpdrive.atomic.particles_injector.tooltip=Injiziere Items oder Teilchen aus einem verbundenen Speicher in einen Standard Beschleuniger.
+tile.warpdrive.atomic.void_shell_plain.name=Normale Void Shell
+tile.warpdrive.atomic.void_shell_plain.tooltip=Bietet 2 leere Kanäle für Teilchen in einem Beschleuniger.\nVerbindet sich nur horizontal mit anderen Void Shells.
+tile.warpdrive.atomic.void_shell_glass.name=Glas Void Shell
+tile.warpdrive.atomic.void_shell_glass.tooltip=Genau wie die normale Void Shell, aber man kann die Teilchen durchsehen.
 
 tile.warpdrive.breathing.air.name=Luft Block
 tile.warpdrive.breathing.air_generator.name=Luftgenerator
@@ -542,29 +543,29 @@ warpdrive.energy.side.changedToInput=%1$s Seite auf Energiezufuhr Modus gestellt
 warpdrive.energy.side.changedToOutput=%1$s Seite auf Energieausgabe Modus gestellt!
 warpdrive.energy.side.changedToDisabled=%1$s Seite auf Deaktiviert gestellt!
 
-warpdrive.accelerator.guide.lowPower_noStorage=Energy storage is too low; we need at least %1$d to continue operation but can only store %2$d !!!
-warpdrive.accelerator.guide.lowPower_accelerating=We're running out of power chief, particles are on the loose, prepare for massive irradiation! !!!
-warpdrive.accelerator.guide.lowPower_noParticles=We need more power to start the accelerator! !!!
-warpdrive.accelerator.guide.noChiller=No chiller could be found for this accelerator! !!!
+warpdrive.accelerator.guide.lowPower_noStorage=Energiespeicher zu klein; wir brauchen mindestens %1$d um den Betrieb fortzusetzen, können aber nur %2$d speichern.
+warpdrive.accelerator.guide.lowPower_accelerating=Uns geht der Strom aus, Chef, Teilchen werden frei, auf massiven Strahlungsaustritt vorbereiten!
+warpdrive.accelerator.guide.lowPower_noParticles=Wir brauchen mehr Strom um den Beschleuniger zu starten!
+warpdrive.accelerator.guide.noChiller=Für diesen Beschleuniger konnte kein Kühler gefunden werden!
 
 warpdrive.beam_frequency.tooltip=Strahlfrequenz auf %1$d gestellt
-warpdrive.beam_frequency.get=Beam frequency %2$d has been retrieved from %1$s  !!!
+warpdrive.beam_frequency.get=Strahlfrequenz %2$d wurde von %1$s abgerufen
 warpdrive.beam_frequency.set=%1$s ist jetzt mit Strahlfrequenz %2$d verknüpft
 warpdrive.beam_frequency.statusLine.valid=Strahlfrequenz %1$d ist gültig.
 warpdrive.beam_frequency.statusLine.invalid=§cStrahlfrequenz %1$d ist ungültig.
 warpdrive.beam_frequency.statusLine.undefined=§7Undefinierte Strahlfrequenz.\n§bNutze eine Stimmgabel§f um die Strahlfrequenz festzulegen.
 
-warpdrive.breathing.alarm=Breathing alarm !!!
-warpdrive.breathing.invalid_setup=No breathing helmet\nor incomplete armor !!!
-warpdrive.breathing.low_reserve=Low air reserve! !!!
-warpdrive.breathing.no_air=No more air! !!!
+warpdrive.breathing.alarm=Atemalarm
+warpdrive.breathing.invalid_setup=Kein Atemhelm und/oder unvollständige Rüstung
+warpdrive.breathing.low_reserve=Luftreserve niedrig!
+warpdrive.breathing.no_air=Keine Luft mehr!
 
-warpdrive.control_channel.tooltip=Control channel is set to %1$d !!!
-warpdrive.control_channel.get=Control channel %2$d has been retrieved from %1$s !!! 
-warpdrive.control_channel.set=%1$s is now tuned with Control channel %2$d !!!
-warpdrive.control_channel.statusLine.valid=Control channel %1$d is valid. !!!
-warpdrive.control_channel.statusLine.invalid=§cControl channel %1$d is invalid. !!!
-warpdrive.control_channel.statusLine.undefined=§7Undefined Control channel.\n§bUse a Tuning fork§r to set it. !!!
+warpdrive.control_channel.tooltip=Steuerungskanal auf %1$d gestellt
+warpdrive.control_channel.get=Steuerungskanal %2$d wurde von %1$s abgerufen
+warpdrive.control_channel.set=%1$s ist jetzt auf Steuerungskanal %2$d gestellt
+warpdrive.control_channel.statusLine.valid=Steuerungskanal %1$d ist gültig.
+warpdrive.control_channel.statusLine.invalid=§cSteuerungskanal %1$d ist ungültig.
+warpdrive.control_channel.statusLine.undefined=§7Nicht definierter Steuerungskanal.\n§bNutze eine Stimmgabel§r um ihn einzustellen.
 
 warpdrive.forcefield.guide.lowPower=Uns geht die Energie aus, Captain. Verringere unseren Energieverbrauch oder hol den schottischen Ingenieur!
 
@@ -598,14 +599,14 @@ warpdrive.forcefield.upgrade.statusLine.stabilization=Stabilisations
 warpdrive.forcefield.upgrade.statusLine.thickness=Stärke
 warpdrive.forcefield.upgrade.statusLine.translation=Translations
 
-warpdrive.particle.ion.name=ion !!!
-warpdrive.particle.ion.tooltip=Produced by colliding a particle bunch in a normal accelerator !!!
-warpdrive.particle.proton.name=proton !!!
-warpdrive.particle.proton.tooltip=Produced by colliding a particle bunch in an advanced accelerator !!!
-warpdrive.particle.antimatter.name=antimatter !!!
-warpdrive.particle.antimatter.tooltip=Produced by colliding a particle bunch in a superior accelerator !!!
-warpdrive.particle.strange_matter.name=strange matter !!!
-warpdrive.particle.strange_matter.tooltip=Produced by colliding 2 particle bunches in a superior accelerator !!!
+warpdrive.particle.ion.name=Ion
+warpdrive.particle.ion.tooltip=Erzeugt durch Kollision eines Partikelhaufens in einem Standard Beschleuniger
+warpdrive.particle.proton.name=Proton
+warpdrive.particle.proton.tooltip=Erzeugt durch Kollision eines Partikelhaufens in einem Weiterentwickelten Beschleuniger
+warpdrive.particle.antimatter.name=Antimaterie
+warpdrive.particle.antimatter.tooltip=Erzeugt durch Kollision eines Partikelhaufens in einem Überlegenen Beschleuniger
+warpdrive.particle.strange_matter.name=Seltsame Materie
+warpdrive.particle.strange_matter.tooltip=Erzeugt durch Kollision zweier Partikelhaufen in einem Überlegenen Beschleuniger
 
 warpdrive.upgrade.result.noUpgradeToDismount=§cKein Upgrade zum deinstallieren vorhanden.
 warpdrive.upgrade.result.notEnoughUpgrades=§cDu brauchst mindestens 1 Item um diesen Block aufzuwerten.
@@ -628,13 +629,13 @@ warpdrive.upgrade.statusLine.none=§7Kein Upgrade installiert.
 warpdrive.upgrade.statusLine.valid=%1$s Upgrade installiert.
 
 warpdrive.video_channel.tooltip=Videokanal auf %1$d gestellt 
-warpdrive.video_channel.get=Video channel %2$d has been retrieved from %1$s !!!
+warpdrive.video_channel.get=Videokanal %2$d wurde von %1$s abgerufen
 warpdrive.video_channel.set=%1$s ist jetzt auf Videokanal %2$d gestellt
 warpdrive.video_channel.statusLine.valid=Videokanal %1$d ist gültig.
 warpdrive.video_channel.statusLine.validCamera=Videokanal %1$d ist gültig für die Kamera bei %2$d, %3$d, %4$d.
 warpdrive.video_channel.statusLine.invalid=§cVideokanal %1$d ist ungültig.
 warpdrive.video_channel.statusLine.invalidOrNotLoaded=§cVideokanal %1$d ist ungültig oder die Kamera ist zu weit weg!
-warpdrive.video_channel.statusLine.undefined=§7Undefined Video channel.\n§bUse a Tuning fork§r to set it.
+warpdrive.video_channel.statusLine.undefined=§7Nicht definierter Videokanal.\n§bNutze eine Stimmgabel§r um ihn einzustellen.
 
 warpdrive.cloakingCore.invalidAssembly=§Konstruktion ungültig!
 warpdrive.cloakingCore.disabled=Tarnfeld ist deaktiviert!
@@ -644,6 +645,6 @@ warpdrive.IC2reactorLaserMonitor.noReactor=Kein Reaktor gefunden!
 warpdrive.IC2reactorLaserMonitor.multipleReactors=%1$d Reaktor(en) verbunden.
 warpdrive.transporter.status=Von %1$.0f %2$.0f %3$.0f zu %4$.0f %5$.0f %6$.0f
 
-warpdrive.tooltip.itemTag.breathingHelmet=§bRaumatmung§r Verbraucht Luftkanister oder IC2 Druckluftzellen.
+warpdrive.tooltip.itemTag.breathingHelmet=§bRaumatmung§r verbraucht Luftkanister oder IC2 Druckluftzellen.
 warpdrive.tooltip.itemTag.flyInSpace=§bRaumtaugliches Jetpack§r.
 warpdrive.tooltip.itemTag.noFallDamage=§bAbsorbiert Fallschaden§r.
