--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -119,6 +119,7 @@ item.warpdrive.upgrade.Energy.name=Energie Upgrade
 
 
 item.warpdrive.tool.crystalToken.name=Kristall Token
+item.warpdrive.tool.crystalToken.tooltip_new=Crystal encapsulation of ship '%1$s'\n§bEnter the red builder's field§7 to claim a ship
 item.warpdrive.tool.crystalToken.tooltip=Kristall Kapsel des Schiffes '%1$s'\n§bBetritt das Scanner Feld§7 um das Schiff zu bauen.
 item.warpdrive.tool.crystalToken0.name=Kristall Token #0
 item.warpdrive.tool.crystalToken1.name=Kristall Token #1
