--- a/src/main/resources/assets/warpdrive/lang/fr_FR.lang
+++ b/src/main/resources/assets/warpdrive/lang/fr_FR.lang
@@ -91,7 +91,7 @@ item.warpdrive.forcefield.upgrade.item_port.tooltip=S'interface avec des contene
 item.warpdrive.forcefield.upgrade.pumping.name=Augmentation de pompage
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4En cours d'implémentation\nPompe des liquides à l'emplacement du champ de force. Ajoute d'autres pompes pour supporter des fluides plus visceux tels que la lave.
 item.warpdrive.forcefield.upgrade.range.name=Augmentation de portée
-item.warpdrive.forcefield.upgrade.range.tooltip=Augmente la portée maximum du projecteur
+item.warpdrive.forcefield.upgrade.range.tooltip=Augmente la taille maximum du projecteur
 item.warpdrive.forcefield.upgrade.repulsion.name=Augmentation de répulsion
 item.warpdrive.forcefield.upgrade.repulsion.tooltip=Pousse les items à placer par l'augmentation de stabilisation. Ajoutes en d'autres pour affecter les items, animaux passifs, monstres et éventuellement les joueurs. Ajoute une inversion pour un effet de zone ou terraformation.
 item.warpdrive.forcefield.upgrade.rotation.name=Augmentation de rotation
