--- a/src/main/resources/assets/warpdrive/lang/ru_RU.lang
+++ b/src/main/resources/assets/warpdrive/lang/ru_RU.lang
@@ -91,7 +91,7 @@ item.warpdrive.forcefield.upgrade.item_port.tooltip=Interface with attached cont
 item.warpdrive.forcefield.upgrade.pumping.name=Pumping upgrade
 item.warpdrive.forcefield.upgrade.pumping.tooltip=§4Work in progress\nPump fluids at the force field location. Add more Pump upgrades to pull fluid with higher viscosity fluids like lava.
 item.warpdrive.forcefield.upgrade.range.name=Range upgrade
-item.warpdrive.forcefield.upgrade.range.tooltip=Increase the projector maximum range
+item.warpdrive.forcefield.upgrade.range.tooltip=Increase the projector maximum size
 item.warpdrive.forcefield.upgrade.repulsion.name=Repulsion upgrade
 item.warpdrive.forcefield.upgrade.repulsion.tooltip=Push stored items to be placed by stabilisation upgrade. Add more Repulsion upgrades to affect passive entities, monsters and eventually players. Add an Inversion for an area/terraforming effect.
 item.warpdrive.forcefield.upgrade.rotation.name=Rotation upgrade
